--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
   --text-lh: 25px;
   --primary-lh: 32px;
-  
+
   --primary-color: #333;
   --link-color: #9D5CD0;
   --secondary-color: #fff;
@@ -493,3 +493,5 @@ path {
 /* == / HERO == */
 
 /* == ABOUT-US == */
+
+/* == / ABOUT-US == */
